--- a/frontend/src/app/components/select-language/select-language.component.css
+++ b/frontend/src/app/components/select-language/select-language.component.css
@@ -1,5 +1,6 @@
 .dropdown {
   position: relative;
+  cursor:pointer;
 }
 
 .dropdown.open .dropdown-menu {
@@ -29,4 +30,18 @@
   background-color: #e6e4e4;
 }
 
+.flag{
+  height: 2.5rem; width: 2.5rem; margin-right: 10px;
+}
 
+.flag2{
+  height: 1.5rem; width: 1.5rem; margin: 0 10px 0 5px;
+}
+
+.flagButton{
+  height: 2.5rem; width: 2.5rem;
+}
+
+.flagButton2{
+  height: 1.5rem; width: 1.5rem;
+}
