--- a/frontend/src/app/components/select-language/select-language.component.html
+++ b/frontend/src/app/components/select-language/select-language.component.html
@@ -1,11 +1,11 @@
 <div class="language-selector">
-  <div class="dropdown" style="cursor:pointer;" [class.open]="showDropdown">
-    <img *ngIf="side" [src]="selectedLanguage?.flag" class="flag" style="height: 2.5rem; width: 2.5rem;" (click)="toggleDropdown()" />
-    <img *ngIf="!side"[src]="selectedLanguage?.flag" class="flag" style="height: 1.5rem; width: 1.5rem;" (click)="toggleDropdown()" />
+  <div class="dropdown" [class.open]="showDropdown">
+    <img *ngIf="side" [src]="selectedLanguage?.flag" class="flagButton" (click)="toggleDropdown()" />
+    <img *ngIf="!side"[src]="selectedLanguage?.flag" class="flagButton2" (click)="toggleDropdown()" />
     <div class="dropdown-menu">
       <div class="dropdown-item" *ngFor="let language of languages" (click)="changeLanguage(language)">
-        <img  *ngIf="side"[src]="language.flag" class="flag" style="height: 2.5rem; width: 2.5rem; margin-right: 10px;"/>
-        <img *ngIf="!side" [src]="language.flag" class="flag" style="height: 1.5rem; width: 1.5rem; margin: 0 10px 0 5px;"/>
+        <img  *ngIf="side"[src]="language.flag" class="flag"/>
+        <img *ngIf="!side" [src]="language.flag" class="flag2"/>
         <span>{{language.name}}</span>
       </div>
     </div>
