--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
   <div class="row flex-nowrap">
-    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark-subtle sidebar-custom" style="width: 300px; position: fixed; top: 0;left: 0; height: 100%;overflow-y: auto;">
+    <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark-subtle sidebar-custom position-fixed top-0 start-0 h-100 overflow-y-auto" style="width: 300px;">
       <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-5 text-white min-vh-100">
         <div class="top">
           <button mat-button (click)="nazad()">
@@ -13,7 +13,7 @@
           </button>
         </div>
 
-        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" style="padding:10px; " id="menu">
+        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start p-3" id="menu">
 
           <li class="nav-element">
             <button mat-button (click)="scroll(reservations)">
@@ -64,18 +64,17 @@
            <div class="row1">
              <div class="col-lg-4">
                <div class="card mb-4">
-                 <div class="card-body text-center" style="display: flex;flex-direction: row; align-items: center; justify-content: flex-start;">
-                   <div style="">
-                   <!--  <img mat-card-image src="https://placehold.co/80x80/orange/white" alt="user image" class="card-img"> -->
+                 <div class="card-body text-center d-flex flex-row align-items-center justify-content-start">
+                   <div>
+
                      <img *ngIf="user.imagePath; else noImage" [src]="user.imagePath" alt="Profile Image" class="card-img">
 
                      <ng-template #noImage>
                        <img src="https://placehold.co/80x80/orange/white" alt="Default Profile Image" class="card-img">
                      </ng-template>
 
-                     <!--<p class="text-muted mb-0 mt-2" *ngIf="isEditing" style="cursor: pointer;" >Change profile picture</p>-->
                    </div>
-                   <div style="display: flex; flex-direction: column; align-items: flex-start; ">
+                   <div  class="d-flex flex-column align-items-start">
                      <h4 class="my-3">{{tempUser?.name}} {{tempUser?.surname}}</h4>
                      <!--<p class="text-muted mb-1">{{tempUser?.username}}</p>-->
                      <div class="col-sm-9">
@@ -89,7 +88,7 @@
                    </div>
                  </div>
 
-                 <input type="file" style="width:200px; margin: 0 0 20px 25px" *ngIf="isEditing" (change)="onFileSelected($event); uploadProfileImage()" accept="image/*">
+                 <input type="file" class="file-input" *ngIf="isEditing" (change)="onFileSelected($event); uploadProfileImage()" accept="image/*">
                </div>
              </div>
              <div class="col-lg-8">
@@ -102,7 +101,7 @@
                      </div>
                      <div class="col-sm-9">
                        <ng-container *ngIf="isEditing; else viewFullName">
-                         <input type="text" [(ngModel)]="user.name" class="form-control"  style="margin-bottom: 10px;">
+                         <input type="text" [(ngModel)]="user.name" class="form-control mb-3">
                           <input type="text" [(ngModel)]="user.surname" class="form-control">
                         </ng-container>
                         <ng-template #viewFullName>
@@ -156,7 +155,7 @@
                         </div>
                       </div>
                       <hr>
-                      <!-- Registration date -->
+
                    <div class="row">
                      <div class="col-sm-3">
                        <p class="mb-0">{{'registrationDate'|transloco}}</p>
@@ -183,7 +182,7 @@
                        <p class="mb-0">{{'password'|transloco}}</p>
                      </div>
                      <div class="col-sm-9">
-                       <div class="password-container" style="margin-bottom: 10px;">
+                       <div class="password-container mb-3">
                          <input matInput [type]="hidePassword1 ? 'password' : 'text'" [(ngModel)]="user.newPassword"  class="form-control"  [placeholder]="'newPassword' | transloco">
                          <button mat-icon-button (click)="hidePassword1=!hidePassword1" class="password-toggle">
                            <mat-icon>{{ hidePassword1 ? 'visibility_off' : 'visibility' }}</mat-icon>
@@ -209,7 +208,7 @@
 
          <ng-container *ngIf="isEditing">
 
-           <div  style="display: flex;  justify-content: space-around;">
+           <div class="buttons">
              <button class="btn btn-success" (click)="saveChanges()">{{'saveChanges'|transloco}}</button>
              <button  class="btn btn-outline-secondary" (click)="toggleEditMode(userScroll)">{{'cancel'|transloco}}</button>
            </div>
