--- a/frontend/src/app/property/property.component.css
+++ b/frontend/src/app/property/property.component.css
@@ -117,56 +117,6 @@
   margin: 0 auto;
 }
 
-.reviews-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  display: inline;
-}
-
-.reviews-list {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.reviews-card {
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  background-color: #ffffff;
-  margin-top: 20px;
-  /*padding: 15px;*/
-}
-
-.review-header {
-  margin-bottom: 10px;
-}
-
-.review-title {
-  font-size: 18px;
-  font-weight: 600;
-  margin: 0;
-}
-
-.review-info {
-  font-size: 14px;
-  color: #555;
-}
-
-.review-rating,
-.review-comment,
-.review-date {
-  display: block;
-}
-
-.review-comment{
-  font-size:25px;
-}
-
-.review-date {
-  font-style: italic;
-  color: #888;
-}
 
 .user-fullname {
   font-weight: bold;
@@ -213,8 +163,8 @@ span.carousel-control-prev-icon:after{
 }
 
 .carousel-indicators {
-  list-style-type: none; /* Uklanja marker za sve liste unutar karusela */
-  padding: 0; /* Uklanja unutrašnje razmake */
-  margin: 0; /* Uklanja spoljne razmake */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
