--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -238,21 +238,7 @@
        </div>
 
        <div #revs class="reservations-container">
-         <h2 class="reviews-title">{{ 'myReviews' | transloco }}</h2>
-<div *ngIf="noReviews" class="text-center">{{'noReviews' |transloco}}</div>
-         <div class="reservations-list">
-           <mat-card *ngFor="let review of reviews" class="reviews-card">
-             <mat-card-content>
-               <h4 mat-card-title style="font-size: 25px; margin-bottom:5px;">{{ review.propertyName }}</h4>
-               <p class="reservation-info">
-                 {{ 'rating' | transloco }}: {{ review.review }}
-                 <br>
-                  {{ review.comment }}<br>
-                  {{ review.dateReview  | date:'short' }}<br>
-               </p>
-             </mat-card-content>
-           </mat-card>
-         </div>
+         <review-component  [type]="'user'" [id]="0"></review-component>
        </div>
 
 
