--- a/frontend/src/app/user-profile/user-profile.component.css
+++ b/frontend/src/app/user-profile/user-profile.component.css
@@ -137,6 +137,23 @@ mat-icon {
   z-index: 1050;
 }
 
+#alert2 {
+  width: 500px;
+  height: 50px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #edd4d4;
+  border: 1px solid #e6c3c3;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1050;
+}
+
 .buttons{
   display: flex;  justify-content: space-around;
 }
