--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -58,6 +58,12 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
+    <div id="alert2" *ngIf="showFailAlert" class="alert alert-danger alert-dismissible fade show" role="alert">
+      <span>{{'passwordsDontMatch' | transloco}}</span>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="hideAlert()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
      <div class="col p-0 content">
        <section id="korisnik" #userScroll style="background-color: #eee; height:100vh">
          <div class="container py-5">
@@ -190,7 +196,7 @@
                        </div>
 
                        <div class="password-container">
-                         <input matInput [type]="hideConfirmPassword ? 'password' : 'text'"  class="form-control"   [placeholder]="'confirmPassword' | transloco">
+                         <input matInput [type]="hideConfirmPassword ? 'password' : 'text'" [(ngModel)]="user.confirmPassword" class="form-control"   [placeholder]="'confirmPassword' | transloco">
                          <button mat-icon-button (click)="hideConfirmPassword=!hideConfirmPassword" class="password-toggle">
                            <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
                          </button>
