--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,3 +5,328 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Dark Theme Styles */
+.dark-theme {
+  background-color: #121212  !important;
+  color: #e0e0e0  !important;
+}
+
+.dark-theme .home-content {
+  padding: 0 20px;
+}
+
+.dark-theme .header {
+  background-color: #1c1c1c !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7) !important;
+}
+
+.dark-theme img {
+  filter: brightness(0.8);
+}
+
+.dark-theme .profile-menu {
+  border-color: #2e2e2e  !important;
+  background-color: #1c1c1c  !important;
+}
+
+.dark-theme .profile-menu:hover {
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
+}
+
+.dark-theme .sidebar {
+  background-color: #1c1c1c  !important;
+  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
+}
+
+.dark-theme .sidebar a {
+  color: #e0e0e0  !important;
+}
+
+.dark-theme .sidebar a:hover {
+  background-color: #333333 !important;
+}
+
+.dark-theme .search-container {
+  background-color: #1c1c1c !important;
+  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+  padding: 16px;
+}
+
+.dark-theme .search-container div {
+  background-color: transparent !important;
+}
+
+.dark-theme .search-container div.where:hover,
+.dark-theme .search-container div.who:hover,
+.dark-theme .search-container div.when:hover {
+  background-color: #333333  !important;
+}
+
+.dark-theme .search-container input {
+  background-color: #333333 !important;
+  color: #e0e0e0 !important;
+  border: 1px solid #444444 ;
+  border-radius: 4px;
+  padding: 8px;
+}
+
+.dark-theme mat-form-field .mat-form-field-infix {
+  background-color: #333333 !important;
+}
+
+.dark-theme mat-date-range-input {
+  background-color: #333333 !important;
+  color: #e0e0e0 !important;
+  padding: 8px;
+  border-radius: 4px !important;
+}
+
+.dark-theme mat-datepicker-toggle {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme mat-datepicker-toggle:hover {
+  color: #ffffff ;
+}
+.dark-theme .mdc-floating-label {
+  color: #e0e0e0 !important ;
+  font-size: smaller !important;
+  padding-bottom:40px !important;
+}
+
+.dark-theme .mdc-floating-label mat-label {
+  color: #e0e0e0 !important;
+}
+.dark-theme .mat-datepicker-toggle-active {
+  color: #ffffff !important;
+}
+
+.dark-theme .mat-calendar {
+  background-color: #1c1c1c !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .mat-calendar .mat-calendar-content {
+  background-color: #333333 !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .mat-calendar .mat-calendar-period-button {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .mat-calendar .mat-calendar-table-header {
+  background-color: #1c1c1c !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme p {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .custom-toolbar {
+  background-color: #1c1c1c !important;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
+}
+
+.dark-theme .custom-toolbar .divider {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .custom-toolbar button.mat-button {
+  color: #e0e0e0 !important;
+}
+.dark-theme .custom-toolbar .mat-toolbar-row button.mat-button {
+  color: #e0e0e0 !important;
+}
+.dark-theme .custom-toolbar mat-icon {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .custom-toolbar button.mat-button:hover {
+  background-color: #333333 !important;
+  color: #ffffff !important;
+}
+
+.dark-theme .custom-toolbar mat-icon:hover {
+  color: #ffffff !important;
+}
+
+.dark-theme .mdc-button__label {
+  color: #ffffff !important;
+}
+
+.dark-theme .divider {
+  color: #e0e0e0;
+}
+
+.dark-theme .content {
+  background-color: #121212;
+}
+
+.dark-theme .property-card {
+  background-color: #1c1c1c;
+  color: #e0e0e0;
+}
+
+.dark-theme .card-img {
+  filter: brightness(0.8);
+}
+
+.dark-theme mat-card-content {
+  background-color: #1c1c1c;
+  color: #e0e0e0;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
+}
+
+.dark-theme .profile-image {
+  filter: brightness(0.8);
+}
+.dark-theme .property-container .top button:hover {
+  background-color: #333;
+}
+.dark-theme .property-container .top button mat-icon {
+  color: #e0e0e0;
+}
+
+.dark-theme .property-header h1 {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .card {
+  background-color: #1e1e1e !important;
+  color: #e0e0e0 !important;
+  border: 1px solid #333;
+}
+
+.dark-theme .card-header {
+  background-color: #333 !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .card-body {
+  background-color: #1e1e1e !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .mat-form-field,
+.dark-theme .form-group label {
+  color: #e0e0e0; /* Light text color */
+}
+
+.dark-theme .form-control {
+  background-color: #333 !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .mat-mdc-text-field-wrapper {
+  background-color: #333 !important;
+}
+
+.dark-theme .mat-mdc-form-field-flex {
+  background-color: #333 !important;
+}
+
+
+/*
+.dark-theme .review-container review-component {
+  background-color: #1e1e1e !important;
+  color: #e0e0e0 !important;
+}*/
+.dark-theme .container-fluid {
+  height: 100%;
+  background-color: #121212 !important;
+  color: #e0e0e0 !important;
+}
+.dark-theme #korisnik{
+  background-color: #121212 !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .sidebar-custom {
+  background-color: #1f1f1f !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .navigation {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .nav-element span {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .nav-element {
+  padding-bottom: 30px;
+}
+
+.dark-theme #alert {
+  background-color: #2d6a4f !important;
+  border: 1px solid #1f5a43 !important;
+}
+
+.dark-theme #alert2 {
+  background-color: #6f2d2d !important;
+  border: 1px solid #5a1f1f !important;
+  color:#3D1111FF !important;
+}
+/*
+.dark-theme .content {
+  margin-left: 300px;
+  height: 100%;
+  overflow-y: auto;
+}*/
+
+.dark-theme .reservations-container {
+  background-color: #121212 !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .reservations-title {
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .reservations-list {
+  gap: 15px;
+}
+
+.dark-theme .password-container {
+  background-color: #2c2c2c !important;
+}
+
+.dark-theme .password-input {
+  width: 100%;
+  padding-right: 40px;
+}
+
+.dark-theme .password-toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.dark-theme .file-input {
+  width: 200px;
+  margin: 0 0 20px 25px;
+}
+
+.dark-theme input[type="file"] {
+  color: transparent;
+}
+
+.dark-theme .btn {
+  background-color: #333 !important;
+  color: #e0e0e0 !important;
+}
+
+.dark-theme .btn-success {
+  background-color: #4caf50 !important;
+}
+
+.dark-theme .btn-outline-secondary {
+  border-color: #444 !important;
+  color: #e0e0e0 !important;
+}
