--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -84,17 +84,17 @@
       <span class="divider">|</span>
       <button mat-button (click)="showAllProperties()"><mat-icon>reorder</mat-icon>{{'all'|transloco}}</button>
       <span class="divider">|</span>
-      <button mat-button (click)="filterProperties('Houses')"><mat-icon>home</mat-icon>{{'houses'|transloco}}</button>
+      <button mat-button (click)="filterProperties('House')"><mat-icon>home</mat-icon>{{'houses'|transloco}}</button>
       <span class="divider">|</span>
-      <button mat-button (click)="filterProperties('Hotels')"><mat-icon>hotel</mat-icon>{{'hotels'|transloco}}</button>
+      <button mat-button (click)="filterProperties('Hotel')"><mat-icon>hotel</mat-icon>{{'hotels'|transloco}}</button>
       <span class="divider">|</span>
       <button mat-button (click)="filterProperties('Countryside')"><mat-icon>terrain</mat-icon>{{'countryside'|transloco}}</button>
       <span class="divider">|</span>
-      <button mat-button (click)="filterProperties('Cabins')"><mat-icon>cabin</mat-icon>{{'cabins'|transloco}}</button>
+      <button mat-button (click)="filterProperties('Cabin')"><mat-icon>cabin</mat-icon>{{'cabins'|transloco}}</button>
       <span class="divider">|</span>
-      <button mat-button (click)="filterProperties('Lake')"><mat-icon>water</mat-icon>{{'lake'|transloco}}</button>
+      <button mat-button (click)="filterProperties('Lake House')"><mat-icon>water</mat-icon>{{'lake'|transloco}}</button>
       <span class="divider">|</span>
-      <button mat-button (click)="filterProperties('Villas')"><mat-icon>villa</mat-icon>{{'villas'|transloco}}</button>
+      <button mat-button (click)="filterProperties('Villa')"><mat-icon>villa</mat-icon>{{'villas'|transloco}}</button>
       <span class="divider">|</span>
     </mat-toolbar-row>
   </mat-toolbar>
