--- a/frontend/src/app/components/review-component/review-component.component.css
+++ b/frontend/src/app/components/review-component/review-component.component.css
@@ -1,8 +1,8 @@
 
 .container {
-  padding: 20px;
+ /* padding: 20px;*/
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .reviews-title {
