--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -45,9 +45,9 @@ img {
 }
 
 .sidebar {
-  height: 120px;
+  max-height: 120px;
   width: 130px;
-  padding: 10px 0 0 0;
+  padding: 10px 0 10px 0;
   display: none;
   position: absolute;
   background-color: white;
@@ -135,12 +135,9 @@ div.dropdown {
   display: none;
   width: 290px;
   height: 250px;
-  /*margin: 15px 0 0 0;*/
   border-radius: 15px;
   background-color: white;
   padding: 0 0 5px 15px;
-  /*display: flex;
-  flex-direction: column;*/
   margin-top: -9px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
 }
@@ -218,10 +215,9 @@ div.dugmici {
 
 .card-img {
   width: 100%;
-  height: 60%;
   object-fit: cover;
+  height: 200px;
 }
-
 mat-card-content {
   flex: 1;
   padding: 16px;
@@ -236,7 +232,9 @@ mat-card-content {
 }
 
 .footer-info {
-  margin-top: 30px;
+  margin-top: auto;
+  padding-bottom: 10px;
+  min-height: 50px;
 }
 
 .profile-image {
@@ -254,20 +252,4 @@ mat-card-content {
 
 body > app-root > home > div.home-content > div > div.search-container > div.when > mat-form-field > div.mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align{
   display: none;
-}/*
-.sidenav-container {
-  height: 100vh;
-  overflow: hidden;
 }
-
-mat-sidenav-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding: 0;
-}
-
-mat-slide-toggle {
-  margin: 0;
-}*/
