--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -81,14 +81,14 @@
 
                    </div>
                    <div  class="d-flex flex-column align-items-start">
-                     <h4 class="my-3">{{tempUser?.name}} {{tempUser?.surname}}</h4>
+                     <h4 class="my-3">{{tempUser.name}} {{tempUser.surname}}</h4>
                      <!--<p class="text-muted mb-1">{{tempUser?.username}}</p>-->
                      <div class="col-sm-9">
                        <ng-container *ngIf="isEditing; else viewUsername">
                          <input type="text" [(ngModel)]="user.username" class="form-control" placeholder="Enter new username">
                        </ng-container>
                        <ng-template #viewUsername>
-                         <p class="text-muted mb-0 text-start">{{ user?.username }}</p>
+                         <p class="text-muted mb-0 text-start">{{ user.username }}</p>
                        </ng-template>
                      </div>
                    </div>
@@ -111,7 +111,7 @@
                           <input type="text" [(ngModel)]="user.surname" class="form-control">
                         </ng-container>
                         <ng-template #viewFullName>
-                          <p class="text-muted mb-0">{{ user?.name }} {{ user?.surname }}</p>
+                          <p class="text-muted mb-0">{{ user.name }} {{ user.surname }}</p>
                         </ng-template>
                       </div>
                     </div>
@@ -126,7 +126,7 @@
                              <input type="text" [(ngModel)]="user.phone" class="form-control">
                            </ng-container>
                            <ng-template #viewPhoneNumber>
-                             <p class="text-muted mb-0">{{ user?.phone }}</p>
+                             <p class="text-muted mb-0">{{ user.phone }}</p>
                            </ng-template>
                          </div>
                        </div>
@@ -141,7 +141,7 @@
                          <input type="email" [(ngModel)]="user.email" class="form-control">
                         </ng-container>
                         <ng-template #viewEmail>
-                          <p class="text-muted mb-0">{{ user?.email }}</p>
+                          <p class="text-muted mb-0">{{ user.email }}</p>
                         </ng-template>
                       </div>
                     </div>
@@ -156,7 +156,7 @@
                             <input type="date" [(ngModel)]="user.dateBirth" class="form-control">
                           </ng-container>
                           <ng-template #viewBirthday>
-                            <p class="text-muted mb-0">{{ user?.dateBirth | date:'dd/MM/yyyy' }}</p>
+                            <p class="text-muted mb-0">{{ user.dateBirth | date:'dd/MM/yyyy' }}</p>
                           </ng-template>
                         </div>
                       </div>
@@ -168,7 +168,7 @@
                      </div>
                      <div class="col-sm-9">
 
-                          <p class="text-muted mb-0">{{ user?.dateOfRegistraion | date:'dd/MM/yyyy' }}</p>
+                          <p class="text-muted mb-0">{{ user.dateOfRegistraion | date:'dd/MM/yyyy' }}</p>
 
                       </div>
                     </div>
