--- a/frontend/src/app/property/property.component.css
+++ b/frontend/src/app/property/property.component.css
@@ -111,42 +111,6 @@
   flex-direction: row;
 }
 
-.review-container {
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-
-.user-fullname {
-  font-weight: bold;
-  font-size: 20px;
-  margin-right: 10px;
-}
-
-.user-username {
-  font-weight: normal;
-  font-size: 20px;
-}
-
-.average-rating{
-  margin: 10px;
-}
-
-.property-header .average-rating {
-  margin-top: 10px;
-  font-size: 16px;
-  font-weight: 600;
-}
-
-.average-rating .rating-label {
-  font-weight: normal;
-}
-
-.average-rating .rating-value {
-  font-weight: bold;
-  color: #ffb400;
-}
 .carousel-item img {
   width: auto;
   height: 650px;
@@ -201,5 +165,108 @@ span.carousel-control-prev-icon:after{
 
 .list-group-item:hover {
   background-color: #e2e6ea;
+}
+
+.review-container {
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.user-fullname {
+  font-weight: bold;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.user-username {
+  font-weight: normal;
+  font-size: 20px;
+}
+
+.average-rating{
+  margin: 10px;
+}
+
+.property-header .average-rating {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.average-rating .rating-label {
+  font-weight: normal;
+}
+
+.average-rating .rating-value {
+  font-weight: bold;
+  color: #ffb400;
+}
+
+.review-section {
+  width: 100%;
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f8f9fa;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0.2, 0.5);
+  margin-bottom: 50px;
+  
+}
+
+.review-section h3 {
+  font-size: 22px;
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.review-section form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.review-section .form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.review-section textarea,
+.review-section select {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.review-section button {
+  align-self: flex-end;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.review-section button:hover {
+  background-color: #0056b3;
+}
+
+
+.review-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .review-section {
+    margin-bottom: 20px;
+  }
 }
 
