--- a/frontend/src/app/user-profile/user-profile.component.css
+++ b/frontend/src/app/user-profile/user-profile.component.css
@@ -44,27 +44,97 @@
   height: 100vh;
   padding: 20px;
   box-sizing: border-box;
-  background-color: #eee;
+  background-color: #f4f4f9; 
 }
 
+
 .reservations-title {
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 28px;
   font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;
 }
+
 
 .reservations-list {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px; 
 }
+
 
 .reservation-card {
   display: flex;
-  align-items: center;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 20px;
+  border-radius: 12px;
+  background-color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  position: relative;
+}
+
+
+.reservation-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+
+.reservation-title {
+  font-size: 20px;
+  font-weight: 600;
+  color: #2b2b2b;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+
+.reservation-info {
+  font-size: 14px;
+  color: #555;
+  line-height: 1.6;
+}
+
+
+.reservation-info strong {
+  color: #333;
+}
+
+.reservation-actions {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+
+.cancel-button {
+  font-size: 14px;
+  background-color: #ff4d4f; 
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+/* Hover effect for the cancel button */
+.cancel-button:hover {
+  background-color: #e63946;  /* Slightly darker red */
+}
+
+.cancel-button:focus {
+  outline: none;
+}
+
+
+
+
+.reviews-title{
+  font-size: 25px;
+  margin: 10px;
 }
 
 .reviews-card{
@@ -73,28 +143,6 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 8px;
-}
-
-.reservation-image {
-  width: 80px;
-  height: 80px;
-  object-fit: cover;
-  margin-right: 15px;
-}
-
-.reservation-title {
-  font-size: 18px;
-  margin: 0;
-}
-
-.reviews-title{
-  font-size: 25px;
-  margin: 10px;
-}
-
-.reservation-info {
-  font-size: 14px;
-  color: #555;
 }
 
 .password-container {
