--- a/frontend/src/app/add-property-dialog/add-property-dialog.component.html
+++ b/frontend/src/app/add-property-dialog/add-property-dialog.component.html
@@ -1,36 +1,34 @@
 <h2 mat-dialog-title>Add New Property</h2>
 <mat-dialog-content [formGroup]="propertyForm">
-  <!-- Property Name -->
+
   <mat-form-field>
     <mat-label>Name</mat-label>
     <input matInput formControlName="name">
   </mat-form-field>
 
-  <!-- Address -->
+
   <mat-form-field>
     <mat-label>Address</mat-label>
     <input matInput formControlName="address">
   </mat-form-field>
 
-  <!-- Number of Rooms -->
+
   <mat-form-field>
     <mat-label>Rooms</mat-label>
     <input type="number" matInput formControlName="numberOfRooms">
   </mat-form-field>
 
-  <!-- Number of Bathrooms -->
+
   <mat-form-field>
     <mat-label>Bathrooms</mat-label>
     <input type="number" matInput formControlName="numberOfBathrooms">
   </mat-form-field>
 
-  <!-- Price Per Night -->
   <mat-form-field>
     <mat-label>Price Per Night</mat-label>
     <input type="number" matInput formControlName="pricePerNight">
   </mat-form-field>
 
-  <!-- City Selection -->
   <mat-form-field>
     <mat-label>City</mat-label>
     <mat-select formControlName="cityID">
@@ -40,7 +38,6 @@
     </mat-select>
   </mat-form-field>
 
-  <!-- Property Type Selection -->
   <mat-form-field>
     <mat-label>Property Type</mat-label>
     <mat-select formControlName="propertyTypeID">
@@ -59,9 +56,19 @@
     </mat-select>
   </mat-form-field>
 
-  <!-- Amenities Selection -->
+  <div>
+    <label>Amenities</label>
+    <div formArrayName="amenities">
+      <div *ngFor="let amenity of amenities; let i = index">
+        <label>
+          <input type="checkbox" [formControlName]="i" /> {{ amenity.name }}
+        </label>
+      </div>
+    </div>
+  </div>
 
-<mat-dialog-actions align="end">
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [disabled]="propertyForm.invalid" (click)="submit()">Add</button>
-</mat-dialog-actions>
+  <mat-dialog-actions align="end">
+    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button [disabled]="propertyForm.invalid" (click)="submit()">Add</button>
+  </mat-dialog-actions>
+
