--- a/frontend/src/app/property/property.component.css
+++ b/frontend/src/app/property/property.component.css
@@ -279,13 +279,13 @@ span.carousel-control-prev-icon:after{
   border: 2px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
-  position: relative; /* Ensure positioning */
+  position: relative;
 }
 
 #map {
   height: 100%;
   width: 100%;
-  position: absolute; /* Ensure full coverage */
+  position: absolute; 
   top: 0;
   left: 0;
 }
